--- a/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
@@ -8,18 +8,35 @@
 
     <f:view contentType="text/html">
         <h:form id="formAll">
+            <p:accordionPanel>
+                <p:tab title="#{msgs.adjustmentLot}">
+                    <h:panelGrid columns="2" cellpadding="10">  
+                        <p:outputLabel value="#{msgs['juridicalNature']}:"/>  
+                        <p:selectOneMenu id="cmbNature" value="#{applicantHarmonizationController.rule.nature.name}">
+                            <f:selectItem itemLabel="#{msgs.none}" itemValue=""/>
+                            <f:selectItems value="#{applicantHarmonizationController.applicantTypes}" var="t" itemValue="#{t.name}" itemLabel="#{msgs[t.name]}" />	
+                        </p:selectOneMenu>
+                        <p:outputLabel value="#{msgs['country']}:"/>  
+                        <p:selectOneMenu value="#{applicantHarmonizationController.rule.country.acronym}" >
+                            <f:selectItem itemLabel="#{msgs.none}" itemValue=""/>
+                            <f:selectItems value="#{applicantHarmonizationController.countries}" var="c" itemValue="#{c.acronym}" itemLabel="#{c.name}"/>					
+                        </p:selectOneMenu>
+                    </h:panelGrid> 
+                    <p:button value="#{msgs.apply}"/>
+                </p:tab>
+            </p:accordionPanel>
             <p:dataTable id="applicants" var="pa" style="font-size:12px"
                          emptyMessage="Não existem depositantes carregados"
                          value="#{applicantHarmonizationController.applicants}" paginator="true"
                          paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
-                         rowKey="#{pa.object}" sortBy="#{pa.object.name}" filterEvent="enter">
-               
+                         rowKey="#{pa.object}" sortBy="#{pa.object.name}" filterEvent="enter" lazy="false">
+
                 <f:facet name="header">  
                     <p:outputPanel>  
                         <h:panelGrid columns="3">
-                        <p:outputLabel id="searchNameLabel" value="#{msgs['searchName']}:"/>
-                        <p:inputText id="searchNameText" style="width:600px" />
-                        <p:button id="btnSearch" value="#{msgs['search']}"/>
+                            <p:outputLabel id="searchNameLabel" value="#{msgs['searchName']}:"/>
+                            <p:inputText id="searchNameText" style="width:600px" />
+                            <p:button id="btnSearch" value="#{msgs['search']}"/>
                         </h:panelGrid>
                     </p:outputPanel>  
                 </f:facet>
@@ -27,7 +44,7 @@
                 <p:columnGroup type="header">
                     <p:row>
                         <p:column rowspan="2" headerText=""/>						
-                        <p:column rowspan="2" headerText="Nome" sortBy="#{pa.object.name}" filterBy="#{pa.object.name}"/>
+                        <p:column rowspan="2" headerText="Nome" sortBy="#{pa.object.name}" filterBy="#{pa.object.name}" filterMatchMode="contains"/>
                         <p:column rowspan="2" headerText="Pais" sortBy="#{pa.object.country.name}"/>
                         <p:column rowspan="2" headerText="Docs" sortBy="#{pa.object.documentCount}"/>
                         <p:column rowspan="2" headerText="Ações" />
