listagem de acordo com patent scope

--- a/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
@@ -34,7 +34,7 @@
 
                     <p:columnGroup type="header">
                         <p:row>
-                            <p:column rowspan="2" headerText="#{msgs['language']}" />
+                            <p:column rowspan="2" headerText="#{msgs['country']}" />
                             <p:column rowspan="2" headerText="#{msgs['title']}" filterBy="#{patent.titleSelect}" filterMatchMode="contains"/>
                             <p:column rowspan="2" headerText="#{msgs['publication.date']}" />
                             <p:column rowspan="2" headerText="#{msgs['classification']}" />
