--- a/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
@@ -9,10 +9,12 @@
     <ui:composition template="/template/template.xhtml">
 
         <ui:define name="content">
-            <h2>#{msgs['edit.patent']}</h2>
+            <h3>#{msgs['edit.patent']}</h3>
             <br/>
-            <h4>#{msgs['application.number']}: #{patentController.selectedPatent.publicationNumber} <br/>
-                #{msgs['title']}: "#{patentController.selectedPatent.titleSelect}"</h4>
+            <h:outputText value="#{msgs['application.number']}:"/>
+            <h5> #{patentController.selectedPatent.publicationNumber}</h5> 
+            <h:outputText value="#{msgs['title']}:" />
+            <h5>"#{patentController.selectedPatent.titleSelect}"</h5>
             <br/>
             <h:form>
 
@@ -81,8 +83,8 @@
 
                     <p:tab id="tab3" title="#{msgs['applicants']}">
 
-                        <h:panelGrid id="applicants" columns="3">
-                            <h:column>
+                        <h:panelGrid id="applicants" columns="3" styleClass="top">
+                            <h:column >
                                 <p:outputLabel value="#{msgs['patent.applicants']}"/>
                                 <p:dataTable id="deleteApplicants" var="applicant" style="font-size:10px"
                                              emptyMessage="#{msg['no.applicant']}"
@@ -157,7 +159,7 @@
 
                     <p:tab id="tab4" title="#{msgs['inventors']}">
 
-                        <h:panelGrid id="inventors" border="0" columns="3"  >
+                        <h:panelGrid id="inventors" border="0" columns="3"  styleClass="top">
                             <h:column>
                                 <p:outputLabel value="#{msgs['patent.inventors']}" />
                                 <p:dataTable id="deleteInventors" var="inventor" style="font-size:10px"
@@ -230,8 +232,15 @@
 
                         </p:dialog>
                     </p:tab>
+                </p:tabView>
 
-                    <p:tab id="tab5" title="#{msgs['presentation.file']}">
+                <h:panelGrid columns="2" cellpadding="10">
+<!--                                    <p:commandButton value="#{msgs['options.file']}"
+                                     onclick="fileDownloadDialog.show();"/>
+                    <p:commandButton value="#{msgs['options.patent']}"
+                                     onclick="patentDownloadDialog.show();"/>-->
+                    <p:dialog id="fileDialog" widgetVar="fileDownloadDialog" modal="true" closable="false"
+                              header="#{msgs['download.file']}" resizable="false">
                         <h:form>
                             <p:panelGrid columns="1">
                                 <p:fileUpload fileUploadListener="#{patentController.uploadPresentationFile}" 
@@ -243,26 +252,22 @@
                                 <p:growl id="messages" showDetail="true"/>
                             </p:panelGrid>
                             <br/>
-                            <p:commandButton value="#{msgs['download.file']}" 
-                                             onclick="fileDownloadDialog.show();"/>
+
                         </h:form>
+                        <center>
+                            <p:commandButton title="#{msgs['download.file']}" ajax="false" 
+                                             icon="ui-icon-arrowthick-1-s" 
+                                             rendered="#{patentController.selectedPatent.presentationFile != null}"
+                                             actionListener="#{patentController.preDownloadPresentation(patentController.selectedPatent)}">  
+                                <p:fileDownload  value="#{patentController.download}" />  
+                            </p:commandButton>
+                            <p:commandButton value="#{msgs['close']}" immediate="true"
+                                             onclick="fileDownloadDialog.hide();" />
+                        </center>
+                    </p:dialog>
 
-                        <p:dialog id="fileDialog" widgetVar="fileDownloadDialog" modal="true" closable="false"
-                                  header="#{msgs['download.file']}" resizable="false">
-                            <center>
-                                <p:commandButton title="#{msgs['download.file']}" ajax="false" 
-                                                 icon="ui-icon-arrowthick-1-s" 
-                                                 rendered="#{patentController.selectedPatent.presentationFile != null}"
-                                                 actionListener="#{patentController.preDownloadPresentation(patentController.selectedPatent)}">  
-                                    <p:fileDownload  value="#{patentController.download}" />  
-                                </p:commandButton>
-                                <p:commandButton value="#{msgs['close']}" immediate="true"
-                                                 onclick="fileDownloadDialog.hide();" />
-                            </center>
-                        </p:dialog>
-                    </p:tab>
-
-                    <p:tab id="tab6" title="#{msgs['patent.info']}">
+                    <p:dialog id="patentDialog" widgetVar="patentDownloadDialog" modal="true" closable="false"
+                              header="#{msgs['download.patent']}" resizable="false">
                         <h:form>
                             <p:panelGrid columns="1">
                                 <p:fileUpload fileUploadListener="#{patentController.uploadPatentInfo}" 
@@ -274,26 +279,21 @@
                                 <p:growl id="messages" showDetail="true"/>
                             </p:panelGrid>
                             <br/>
-                            <p:commandButton value="#{msgs['download.patent']}" 
-                                             onclick="patentDownloadDialog.show();"/>
+
                         </h:form>
+                        <center>
+                            <p:commandButton title="#{msgs['download.patent']}" ajax="false" 
+                                             icon="ui-icon-arrowthick-1-s" 
+                                             rendered="#{patentController.selectedPatent.patentInfo != null}"
+                                             actionListener="#{patentController.preDownloadPatent(patentController.selectedPatent)}">  
+                                <p:fileDownload  value="#{patentController.download}" />  
+                            </p:commandButton>
+                            <p:commandButton value="#{msgs['close']}" immediate="true"
+                                             onclick="patentDownloadDialog.hide();" />
+                        </center>
+                    </p:dialog>
 
-                        <p:dialog id="patentDialog" widgetVar="patentDownloadDialog" modal="true" closable="false"
-                                  header="#{msgs['download.patent']}" resizable="false">
-                            <center>
-                                <p:commandButton title="#{msgs['download.patent']}" ajax="false" 
-                                                 icon="ui-icon-arrowthick-1-s" 
-                                                 rendered="#{patentController.selectedPatent.patentInfo != null}"
-                                                 actionListener="#{patentController.preDownloadPatent(patentController.selectedPatent)}">  
-                                    <p:fileDownload  value="#{patentController.download}" />  
-                                </p:commandButton>
-                                <p:commandButton value="#{msgs['close']}" immediate="true"
-                                                 onclick="patentDownloadDialog.hide();" />
-                            </center>
-                        </p:dialog>
-                    </p:tab>
-                </p:tabView>
-
+                </h:panelGrid>
 
                 <h:panelGrid columns="2" cellpadding="10">
                     <h:commandLink value="#{msgs['update']}" action="#{patentController.save()}"
