--- a/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentEdit.xhtml
@@ -83,7 +83,7 @@
 
                     <p:tab id="tab3" title="#{msgs['applicants']}">
 
-                        <h:panelGrid id="applicants" columns="3" styleClass="top">
+                        <h:panelGrid id="applicants" columns="3" columnClasses="alignTop,alignTop,alignTop">
                             <h:column >
                                 <p:outputLabel value="#{msgs['patent.applicants']}"/>
                                 <p:dataTable id="deleteApplicants" var="applicant" style="font-size:10px"
@@ -159,7 +159,7 @@
 
                     <p:tab id="tab4" title="#{msgs['inventors']}">
 
-                        <h:panelGrid id="inventors" border="0" columns="3"  styleClass="top">
+                        <h:panelGrid id="inventors" border="0" columns="3"  columnClasses="alignTop,alignTop,alignTop">
                             <h:column>
                                 <p:outputLabel value="#{msgs['patent.inventors']}" />
                                 <p:dataTable id="deleteInventors" var="inventor" style="font-size:10px"
